--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             padding-bottom: 50px;
         }
 
-        /* 顶部统计卡片：移动端自动变为2x2网格 */
+        /* 顶部统计卡片 */
         .stat-container { 
             display: flex; 
             gap: 15px; 
@@ -62,7 +62,6 @@
         .content-left { flex: 1; min-width: 0; } 
         .sidebar-right { width: 340px; flex-shrink: 0; position: sticky; top: 20px; }
 
-        /* 响应式断点：小于992px（平板/手机）侧边栏移到上方 */
         @media (max-width: 992px) {
             .main-grid { flex-direction: column; }
             .sidebar-right { 
@@ -71,7 +70,6 @@
                 order: -1; 
                 margin-bottom: 20px;
             }
-            .map-card { padding: 15px !important; }
             #map-container { height: 350px !important; }
         }
 
@@ -129,13 +127,10 @@
         }
         .btn-load-more:hover { background: var(--primary); color: white; }
 
-        /* 针对手机端优化画廊列数：一行两个 */
         @media (max-width: 576px) {
             .row.g-2 { --bs-gutter-x: 10px; --bs-gutter-y: 10px; }
             .postcard-img { height: 140px; }
-            .card-body { padding: 10px; }
             .card-body h6 { font-size: 0.85rem; }
-            .card-body .small { font-size: 0.7rem !important; }
         }
 
         [v-cloak] { display: none !important; }
@@ -187,16 +182,21 @@
                         <div class="postcard-item shadow-sm">
                             <div class="card-tag" :style="{background: card.type=='收到'?'var(--success)':'var(--info)'}">{{ card.type }}</div>
                             <img :src="card.imgFront" class="postcard-img" loading="lazy">
-                            <div class="card-body">
-                                <h6 class="fw-bold text-truncate mb-1">{{ card.region }}</h6>
-                                <div class="d-flex justify-content-between align-items-center small text-muted">
-                                    <span><i class="fa-regular fa-calendar me-1"></i>{{ card.receiveDate || card.sendDate || '—' }}</span>
-                                    <span class="badge bg-light text-dark font-monospace" style="font-size: 0.6rem;">{{ card.id }}</span>
-                                </div>
-                            </div>
+                           <div class="card-body">
+    <h6 class="fw-bold text-truncate mb-1">{{ card.region || card.country }}</h6>
+    <div class="d-flex justify-content-between align-items-center small text-muted">
+        <span>
+            <i class="fa-regular fa-calendar me-1"></i>{{ card.receiveDate || card.sendDate || '—' }}
+            <span v-if="card.receiveDate && card.sendDate" class="text-primary fw-bold ms-1" style="font-size: 0.7rem;">
+                (✈️ {{ Math.floor((new Date(card.receiveDate) - new Date(card.sendDate))/86400000) }}天)
+            </span>
+        </span>
+        <span class="badge bg-light text-dark font-monospace" style="font-size: 0.6rem;">{{ card.id }}</span>
+    </div>
+</div>
                         </div>
                     </a>
-                </div>
+                </div> 
             </div>
 
             <div v-if="displayCount < totalFilteredCount" class="text-center mt-5 mb-5">
@@ -216,8 +216,9 @@
                         <label class="form-label">关键词 / 标签</label>
                         <input v-model="filterTag" type="text" class="form-control" placeholder="搜索内容、地点...">
                     </div>
+                    
                     <div class="col-6">
-                        <label class="form-label">省份</label>
+                        <label class="form-label">省份 (国内)</label>
                         <select v-model="filterProvince" class="form-select" @change="filterCity=''">
                             <option value="">全部</option>
                             <option v-for="p in provinces" :value="p">{{p}}</option>
@@ -230,29 +231,49 @@
                             <option v-for="c in availableCities" :value="c">{{c}}</option>
                         </select>
                     </div>
+
                     <div class="col-6">
-                        <label class="form-label">平台</label>
+                        <label class="form-label">来源平台</label>
                         <select v-model="filterPlatform" class="form-select">
                             <option value="">全部</option>
                             <option v-for="p in platforms" :value="p">{{p}}</option>
                         </select>
                     </div>
                     <div class="col-6">
-                        <label class="form-label">收寄</label>
+                        <label class="form-label">收寄状态</label>
                         <select v-model="filterType" class="form-select">
                             <option value="">全部</option>
                             <option value="收到">📥 收到</option>
                             <option value="寄出">📤 寄出</option>
                         </select>
                     </div>
-                    <div class="col-12">
-                        <label class="form-label">排序</label>
-                        <select v-model="sortBy" class="form-select">
-                            <option value="id_desc">按编号 (新→旧)</option>
-                            <option value="id_asc">按编号 (旧→新)</option>
-                            <option value="date_desc">按日期 (最近优先)</option>
+
+                    <div class="col-6">
+                        <label class="form-label">国家 / 地区</label>
+                        <select v-model="filterCountry" class="form-select" @change="filterProvince=''">
+                            <option value="">全部国家</option>
+                            <option v-for="c in countries" :value="c">{{c}}</option>
                         </select>
                     </div>
+                    <div class="col-6">
+    <label class="form-label">结果排序</label>
+    <select v-model="sortBy" class="form-select">
+        <optgroup label="时间与编号">
+            <option value="date_desc">📅 日期 (近优先)</option>
+            <option value="date_asc">📅 日期 (远优先)</option>
+            <option value="id_desc">🔢 编号 (新→旧)</option>
+            <option value="id_asc">🔢 编号 (旧→新)</option>
+        </optgroup>
+        <optgroup label="时光旅程">
+            <option value="duration_desc">⏳ 漂流最久</option>
+            <option value="duration_asc">⚡ 漂流最快</option>
+        </optgroup>
+        <optgroup label="地理分布">
+            <option value="area">📍 按国家/地区</option>
+        </optgroup>
+    </select>
+</div>
+
                     <div class="col-12 mt-4 pt-3 border-top">
                         <button class="btn btn-reset-large" @click="resetAll">
                             <i class="fa-solid fa-arrows-rotate"></i> 重置所有筛选
